--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
+    "@react-google-maps/api": "^2.20.8",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "firebase": "^12.7.0",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.294.0",
+    "maath": "^0.10.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.20.0",
-    "lucide-react": "^0.294.0",
-    "framer-motion": "^10.16.0"
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
